Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>I am a current student in Flatiron School's Full Stack Web Development program, looking to secure a position as a software developer upon graduation!</p>
